# driftlens

./: README.md  pyproject.toml
examples/: .driftlens.yaml
examples/prod/: .env  .env.example  service.yaml
examples/stage/: .env  .env.example  service.yaml
src/driftlens/: cli.py  engine.py  loaders.py  models.py  policy.py  reporting.py  scoring.py
