[project]
name = "driftlens"
version = "0.2.0"
description = "Environment drift detector for delivery configs (.env, YAML, JSON)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.1",
]

[project.scripts]
driftlens = "driftlens.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
